# damo

./: .gitignore  Aufgabenbeschreibung_Niklas_Thieme.docx  CMakeLists.txt  Messprotokoll.xlsx  README.md  Vagrantfile  exportPDF.sh  rebuild.sh
aufgabenbeschreibung/: Aufgabenbeschreibung_BA_Thieme_JL.docx  Vorlage Aufgabenbeschreibung.docx
programm/: CMakeLists.txt  rebuild.sh
programm/build-visualizer-Desktop-Debug/: CMakeCache.txt  Makefile  ReadPLY  cmake_install.cmake
programm/build-visualizerSTL-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
programm/damo/: CMakeLists.txt
programm/damo/src/: damo.cpp
programm/pythonVis/: contourMatcher.py  data_stuff.py  easyStitcher.py  gui.py  imageAnalyser.py  imageStitcher.py  pc2img.py  pc_stitcher.py  pointCloudStitcher.py  pointcloud_array.py  stl_converter.py  tdmsHandler.py  visualize.py
programm/pythonVis/deformation_data/: FDM_sp0_stitched_FDM_sp1_stitched_0_0.txt  FDM_sp0_stitched_FDM_sp1_stitched_0_1.txt  FDM_sp0_stitched_FDM_sp1_stitched_1_1.txt  FDM_sp0_stitched_FDM_sp2_stitched_0_0.txt  FDM_sp0_stitched_FDM_sp2_stitched_0_1.txt  FDM_sp0_stitched_FDM_sp2_stitched_1_0.txt  FDM_sp0_stitched_FDM_sp2_stitched_1_1.txt  FDM_sp0_stitched_FDM_sp3_stitched_0_0.txt  FDM_sp0_stitched_FDM_sp3_stitched_0_1.txt  FDM_sp0_stitched_FDM_sp3_stitched_1_0.txt  FDM_sp0_stitched_FDM_sp3_stitched_1_1.txt  FDM_sp0_stitched_FDM_sp4_stitched_0_1.txt  FDM_sp0_stitched_FDM_sp4_stitched_1_0.txt  FDM_sp0_stitched_FDM_sp4_stitched_1_1.txt  FDM_sp0_stitched_FDM_sp6_stitched_0_0.txt  FDM_sp0_stitched_FDM_sp6_stitched_0_1.txt  FDM_sp0_stitched_FDM_sp6_stitched_1_0.txt  FDM_sp0_stitched_FDM_sp6_stitched_1_1.txt
programm/visualizerPLY/: CMakeLists.txt  ReadPLY.cpp  rebuild.sh
programm/visualizerSTL/: CMakeLists.txt  ReadSTL.cpp
src/DA-Vorlage/: header.tex  main.bbl  main.blg  main.lof  main.tex  main.toc
src/DA-Vorlage/images/: the-same-model-in-a-tessellated-format-showing-a-digital-patterning-211229_download.avif
src/DA-Vorlage/kapitel/: 10_Zusammenfassung.tex  1_EinleitungMotivation.tex  2_StandDerTechnik.tex  3_ZielderArbeit.tex  4_Datenerfassung.tex  5_Datenaufbereitung.tex  5_Pointclouds.tex  6_Datenaufbereitung.tex  6_Stitchting.tex  7_Deformation.tex  8_Software.tex  9_Validierung.tex  titelseite.tex
src/DA-Vorlage/literatur/: quellen.bib
src/ausarbeitung/: main.blg  main.tex
src/ausarbeitung/sections/: aufgabenteile.tex  header.tex  introduction.tex  quellen.bib  timeframe.tex  unterschrift.tex
src/bachelorArbeit/: .latexmkrc  Inhaltsverzeichnis  main.tex  quellen.bib  tudo-raumplanung-thesis-report.cls
src/bachelorArbeit/appendices/: appendix1.tex
src/bachelorArbeit/bibliography/: references.bib
src/bachelorArbeit/chapters/: introduction.tex  sample-chapter.tex
src/bachelorArbeit/figures/: Figure2a.eps  Figure2b.eps
src/bachelorArbeit/sections/: 1_EinleitungMotivation.tex  2_StandDerTechnik.tex  3_ZielderArbeit.tex  5_Implementierung.tex  5_Pointclouds.tex  6_5_stitchting.tex  6_Datenaufbereitung.tex  6_Stitching.tex  6_Stitchting.tex  7_deformation.tex  8_Software.tex  9_Validierung.tex  (+1 more)
src/damo/: CMakeLists.txt
src/presentation/: main.tex  slides.tex
src/presentation2/: beamerthemeTUD.sty  slides.snm  slides.tex
src/presentationOld/: 3d_druck.tex  3d_modell.tex  beamerthemeTUD.sty  repositioning.tex  slides.tex  sources.tex
state-of-the-art/: README  README.md
(+58 files in other folders)
